--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./favicon-32x32.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Interactive rating component built with React and Tailwind CSS. Includes smooth animations with Framer Motion and a dark/light theme toggle. Perfect for collecting user feedback with a modern UI." />
+
   <title>Interactive Rating Component</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
